[project]
name = "renpy-build"
readme = "README.rst"
license = "MIT"
version = "1.0.0"
requires-python = "==3.12.*"
dependencies = [
    "Cython==3.1.4",
    "pefile==2022.5.30",
    "alabaster==0.7.16",
    "babel==2.16.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "docutils==0.20.1",
    "ecdsa==0.19.0",
    "future==1.0.0",
    "idna==3.8",
    "imagesize==1.4.1",
    "Jinja2==3.1.4",
    "MarkupSafe==2.1.5",
    "packaging==24.1",
    "pyasn1==0.6.1",
    "Pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "requests==2.32.3",
    "rsa==4.9",
    "setuptools==80.9.0",
    "six==1.16.0",
    "snowballstemmer==2.2.0",
    "Sphinx==7.4.7",
    "sphinx-rtd-dark-mode==1.3.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jquery==4.1",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "typing==3.7.4.3",
    "urllib3==2.2.2",
]

# This project is not meant to be installed.

[tool.pyright]
include = [
    "renpybuild/",
    "tasks/",
]

typeCheckingMode = "basic"

reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportMissingModuleSource = false
reportUnnecessaryTypeIgnoreComment = "information"
reportTypeCommentUsage = "information"

[tool.cyright]
include = [
    "renpybuild/",
    "tasks/",
]

reportGeneralTypeIssues = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalContextManager = false
reportOptionalOperand = false
reportMissingModuleSource = false

[tool.ruff]
line-length = 120

[tool.ruff.format]
preview = true
